--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tanvi Budhabaware</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/0c5034b4cf.js" crossorigin="anonymous"></script>
@@ -157,15 +157,15 @@
             <div class="info" id="skills">
                 <p class="category">Skills</p>
                 <div id="grid">
-                    <div>1</div>
-                    <div>2</div>
-                    <div>3</div>
-                    <div>4</div>
-                    <div>5</div>
-                    <div>6</div>
-                    <div>7</div>
-                    <div>8</div>
-                    <div>9</div>
+                    <div>C++</div>
+                    <div>Python</div>
+                    <div>HTML</div>
+                    <div>CSS</div>
+                    <div>JavaScript</div>
+                    <div>MySQL</div>
+                    <div>MongoDB</div>
+                    <div>Flutter Development</div>
+                    <div>GCP</div>
                 </div>
                 <p class="clg"> </p>
                 <hr>
